2000-09-25  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* libresolv/sys/bitypes.h, sfio/src/lib/sfio/sfhdr.h,
	  ssl/ssl.c:
	    Experimental changes to support compilation at AIX 4.1.

	* proto/db/dbases.conf:
	    The 'thishost' relations used to carry '-d pathalias'
	    driver option on original systems, now it was missing..

2000-09-22  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/Makefile.in:
	    An adjacent directory install failed when system
	    does not have suitable binary 'install' program, and
	    'install.sh' is needed.  Rearranged things.

2000-09-21  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/mq2auth.c, scheduler/scheduler.c:
	    File leakage at authuser(), which caused opendir() to fail,
	    and its resulting NULL was used unprotected -> SEGV.
	    (Ran out of free file descriptors.)

	* router/functions.c, transports/hold/hold.c, proto/cf/aliases.cf:
	    "hold" handling for the $(homedirectory ...) function.

2000-09-20  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/cf/rrouter.cf, proto/db/routes:
	    Generalizing on various smtp* mechanisms.

	* proto/scheduler.conf.in:
	    Channel prototypes for  smtp77/*, smtp77x/*, and others.
	    Some reordering, and log option rearrangements.

	* transports/smtp/smtp.c, man/smtp.8:
	    ESMTP disabler feature. ( -77 option )

	* packaging/solaris/Makefile.in, packaging/solaris/README,
	    More work at package manufacturing, now it likely works
	    and produces suitable Solaris PKG files.

	* Makefile.in:
	    Copy current compilation time valid  config.status  and
	    ChangeLog files into $MAILSHARE  directory.  Those give
	    a very good idea of HOW the package was made.

	* packaging/solaris/*:
	    Reworked a bit with Solaris pkgmk wizard..

	* proto/cf/aliases.cf:
	    A nuisance (unlikely a security problem) with *-group
	    expansion.  One pair of double-quotes missing.

	* scheduler/mq2.c: